feat(marketplace): module boundaries, paged units, seed listings and tour request lifecycle
- Marketplace reads property, unit, storage, payment and finance data only through
  their facades; entity links replaced by UUID columns; marketplace added to
  ModuleBoundaryTest. PropertyType moved to platform.common.
- GET /marketplace/properties/{id}/units: paginated, bookable-first units; property
  detail returns starting price and unit counts instead of every unit.
- V15 seeds prices, bookability, descriptions and photos for the demo properties.
- Dev profile accepts OTP 000000 (app.marketplace.otp.dev-code); OTP response
  exposes resendAfterSeconds; CORS allows X-Otp-Session-Token.
- V16 tour request lifecycle: landlord approve/reject with note, prospect cancel,
  one active tour per phone per property (virtual generated column + unique index),
  optimistic locking, scheduled close of past tours.
- Landlord APIs: /properties/{id}/tour-requests (+summary), /tour-requests/{id}/approve|reject.
- Prospect APIs: /marketplace/my/tour-requests and cancel, keyed by the OTP session phone.
- Public lead status no longer returns the prospect's name, phone or email.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>